[package]
name = "sort-downloads"
version = "0.1.2"
edition = "2024"
license-file = "COPYING.txt"
description = "My TUI for generating different types of projects"
homepage = "https://codeberg.org/Ghostboo124/sort-downloads.git"
repository = "https://codeberg.org/Ghostboo124/sort-downloads.git"
readme = "README.md"

[[bin]]
name = "sort-downloads"
path = "src/main.rs"
test = true
bench = false
